# learning_cpp

./: README.md
builder/need_for_builder/: run.cpp
solid_design_principles/depedence_inversion/: CMakeLists.txt  run.cpp
solid_design_principles/interface_segregration/: CMakeLists.txt  run.cpp
solid_design_principles/liskov_substitution_princ/: run.cpp
solid_design_principles/open_closed_principle/: run.cpp
solid_design_principles/single_responsibility_priniciple/: run.cpp
